Fixed spacing on photo gallery index page

--- a/docroot/themes/custom/pinballoutreach/css/style.css
+++ b/docroot/themes/custom/pinballoutreach/css/style.css
@@ -323,6 +323,7 @@
   .view-photo-gallery-listing .views-col {
     width: 30%;
     float: left;
+    padding-right: 20px;
   }
 }
 
